--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     
     <!-- Estilização do html puxa do css-->
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/home.css">
+    <link rel="stylesheet" href="/styles/reponsive.css">
+   
 </head>
 
 <body>
